updated to Wicket 1.4; improved instructions; footer layout corrected via css
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1141165 13f79535-47bb-0310-9956-ffa450edef68

--- a/css/screen.css
+++ b/css/screen.css
@@ -41,6 +41,7 @@ a:hover {
 #content{
     width:899px;
     height:auto;
+    overflow: auto; /* keeps footer inside */
 }
 
 p, table, h1, h2, h3, h4, h5, h6, h7, div.code {
