Improved custom css for pdf generation and html printing.
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1535160 13f79535-47bb-0310-9956-ffa450edef68

--- a/guide/guide/src/docs/css/custom-pdf.css
+++ b/guide/guide/src/docs/css/custom-pdf.css
@@ -4,7 +4,7 @@
 
  body{
    font-family:helvetica,arial,sans-serif!important;
-   font-size: 11pt!important;
+   font-size: 10pt!important;
  } 
 
 .paragraph{
@@ -25,5 +25,11 @@ table {
 
 .paragraph{
  text-indent: 1em!important;
+}
+
+h1{
+  font-size:3em!important;
+  text-align:right;
+  padding-bottom: 30px;	
 }
 
