--- a/guide/guide/src/docs/css/custom.css
+++ b/guide/guide/src/docs/css/custom.css
@@ -52,3 +52,8 @@ h1, h2, #main a, #main .project strong, .local .local-title .toggle a, #table-of
     background: none!important;
 }
 
+@media print
+  {
+   #col2 {display:none!important;}
+  }
+
