Updated generated files take 3, hopefully the last...
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1535187 13f79535-47bb-0310-9956-ffa450edef68

--- a/guide/css/custom.css
+++ b/guide/css/custom.css
@@ -51,3 +51,9 @@ h1, h2, #main a, #main .project strong, .local .local-title .toggle a, #table-of
 #navigation .separator {
     background: none!important;
 }
+
+@media print
+  {
+   #col2 {display:none!important;}
+  }
+
